--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,41 @@
-version: "3"
+version: "3.9"
 
 services:
   redis:
     image: redis:alpine
+    restart: unless-stopped
+    container_name: redis
 
-  rabbit-mq:
-    image: rabbitmq:alpine
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    restart: unless-stopped
+    container_name: rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_USER: "guest"
+      RABBITMQ_DEFAULT_PASS: "guest"
+      RABBITMQ_DEFAULT_VHOST: "/"
+    volumes:
+      - ./rabbitmq:/var/lib/rabbitmq/mnesia
+    ports:
+      - 15672:15672
 
   jasmin:
     build:
       context: ./
-      dockerfile: ./docker/Dockerfile.dev
+      dockerfile: ./docker/Dockerfile
     container_name: jasmin
     volumes:
-      - ./jasmin:/usr/jasmin/jasmin
+      - ./configs:/etc/jasmin
+      - ./configs/store:/etc/jasmin/store
+      - ./logs:/var/log/jasmin
+      - ./tmp:/tmp
     ports:
       - 2775:2775
       - 8990:8990
       - 1401:1401
     depends_on:
       - redis
-      - rabbit-mq
+      - rabbitmq
     environment:
       REDIS_CLIENT_HOST: redis
-      AMQP_BROKER_HOST: rabbit-mq
+      AMQP_BROKER_HOST: rabbitmq
