--- a/docker/Dockerfile.alpine
+++ b/docker/Dockerfile.alpine
@@ -1,6 +1,6 @@
 FROM python:3-alpine
 
-LABEL maintainer="Jookies LTD <jasmin@jookies.net>"
+MAINTAINER Jookies LTD <jasmin@jookies.net>
 
 # add our user and group first to make sure their IDs get assigned consistently, regardless of whatever dependencies get added
 RUN addgroup -S jasmin && adduser -S -g jasmin jasmin
@@ -34,9 +34,6 @@ RUN pip install -e git+https://github.com/jookies/python-messaging.git@master#eg
 RUN pip install -e git+https://github.com/jookies/smpp.pdu.git@master#egg=smpp.pdu3
 RUN pip install -e git+https://github.com/jookies/smpp.twisted.git@master#egg=smpp.twisted3
 
-# install PgSQL driver
-RUN pip install psycopg2-binary
-
 COPY . .
 
 RUN pip install .
@@ -58,7 +55,7 @@ VOLUME [${LOG_PATH}, ${CONFIG_PATH}, ${STORE_PATH}]
 
 COPY docker/docker-entrypoint.sh /
 ENTRYPOINT ["/docker-entrypoint.sh"]
-CMD ["jasmind.py", "--enable-interceptor-client", "--enable-dlr-thrower", "--enable-dlr-lookup", "-u", "jcliadmin", "-p", "jclipwd"]
+CMD ["jasmind.py", "--enable-interceptor-client", "--enable-dlr-thrower", "--enable-dlr-lookup", "-u", "jsadmin", "-p", "jspasswd"]
 # Notes:
 # - jasmind is started with native dlr-thrower and dlr-lookup threads instead of standalone processes
 # - restapi (0.9rc16+) is not started in this docker configuration
