--- a/misc/config/dlr.cfg
+++ b/misc/config/dlr.cfg
@@ -14,16 +14,16 @@
 # The following directives define the process of delivering delivery-receipts through http to third party
 # application, it is explained in "HTTP API" documentation
 # Sets socket timeout in seconds for outgoing client http connections.
-#http_timeout	= 30
+http_timeout	= 30
 # Define how many seconds should pass within the queuing system for retrying a failed throw.
-#retry_delay	= 30
+retry_delay	= 30
 # Define how many retries should be performed for failing throws of DLR.
-#max_retries	= 3
+max_retries	= 5
 
 # Specify the pdu type to consider when throwing a receipt through SMPPs, possible values:
 # - data_sm
 # - deliver_sm (default pdu)
-#dlr_pdu 		= deliver_sm
+dlr_pdu 	= deliver_sm
 
 # Specify the server verbosity level.
 # This can be one of:
@@ -33,10 +33,10 @@
 # WARNING (only very important / critical messages and errors are logged)
 # ERROR (only errors / critical messages are logged)
 # CRITICAL (only critical messages are logged)
-#log_level			= INFO
+log_level	= DEBUG
 
 # Specify the log file path
-#log_file			= /var/log/jasmin/dlr-thrower.log
+log_file	= /var/log/jasmin/dlr-thrower.log
 
 # When to rotate the log file, possible values:
 # S:		Seconds
@@ -45,30 +45,30 @@
 # D:		Days
 # W0-W6:	Weekday (0=Monday)
 # midnight:	Roll over at midnight
-#log_rotate = W6
+log_rotate 	= W6
 
 # The following directives define logging patterns including:
 # - log_format: using python logging's attributes
 #               refer to https://docs.python.org/2/library/logging.html#logrecord-attributes
 # -log_date_format: using python strftime formating directives
 #                   refer to https://docs.python.org/2/library/time.html#time.strftime
-#log_format			= %(asctime)s %(levelname)-8s %(process)d %(message)s
-#log_date_format	= %Y-%m-%d %H:%M:%S
+log_format	= %(asctime)s %(levelname)-8s %(process)d %(message)s
+log_date_format	= %Y-%m-%d %H:%M:%S
 
 [smpp-server-pb-client]
 # The following directives define client connector to SMPPServerPB
-#host						= 127.0.0.1
-#port						= 14000
-#username				    = smppsadmin
-#password 			        = smppspwd
+host		= 127.0.0.1
+port		= 14000
+username 	= smppsadmin
+password 	= smppspwd
 
 [amqp-broker]
 # The following directives define the way how Jasmin is connecting to the AMQP Broker,
 # default values must work with a freshly installed RabbitMQ server.
-#host				= 127.0.0.1
-#vhost				= /
-#spec				= /etc/jasmin/resource/amqp0-9-1.xml
-#port				= 5672
-#username			= guest
-#password			= guest
-#heartbeat                      = 0
+host		= 127.0.0.1
+vhost		= /
+spec		= /etc/jasmin/resource/amqp0-9-1.xml
+port		= 5672
+username	= guest
+password	= guest
+heartbeat 	= 0
