--- a/misc/config/dlrlookupd.cfg
+++ b/misc/config/dlrlookupd.cfg
@@ -14,13 +14,13 @@
 [amqp-broker]
 # The following directives define the way how Jasmin is connecting to the AMQP Broker,
 # default values must work with a freshly installed RabbitMQ server.
-#host				= 127.0.0.1
-#vhost				= /
-#spec				= /etc/jasmin/resource/amqp0-9-1.xml
-#port				= 5672
-#username			= guest
-#password			= guest
-#heartbeat                      = 0
+host				= 127.0.0.1
+vhost				= /
+spec				= /etc/jasmin/resource/amqp0-9-1.xml
+port				= 5672
+username			= guest
+password			= guest
+heartbeat 			= 0
 
 # Specify the server verbosity level.
 # This can be one of:
@@ -30,10 +30,10 @@
 # WARNING (only very important / critical messages and errors are logged)
 # ERROR (only errors / critical messages are logged)
 # CRITICAL (only critical messages are logged)
-#log_level			= INFO
+log_level			= INFO
 
 # Specify the log file path
-#log_file			= /var/log/jasmin/amqp-client.log
+log_file			= /var/log/jasmin/amqp-client.log
 
 # When to rotate the log file, possible values:
 # S:		Seconds
@@ -42,29 +42,29 @@
 # D:		Days
 # W0-W6:	Weekday (0=Monday)
 # midnight:	Roll over at midnight
-#log_rotate = W6
+log_rotate 			= W6
 
 # The following directives define logging patterns including:
 # - log_format: using python logging's attributes
 #               refer to https://docs.python.org/2/library/logging.html#logrecord-attributes
 # -log_date_format: using python strftime formating directives
 #                   refer to https://docs.python.org/2/library/time.html#time.strftime
-#log_format			= %(asctime)s %(levelname)-8s %(process)d %(message)s
-#log_date_format	= %Y-%m-%d %H:%M:%S
+log_format			= %(asctime)s %(levelname)-8s %(process)d %(message)s
+log_date_format			= %Y-%m-%d %H:%M:%S
 
-#connection_loss_retry			= True
-#connection_failure_retry		= True
-#connection_loss_retry_delay	= 10
-#connection_loss_failure_delay	= 10
+connection_loss_retry		= True
+connection_failure_retry	= True
+connection_loss_retry_delay	= 10
+connection_loss_failure_delay	= 10
 
 [redis-client]
 # The following directives define the way how Jasmin is connecting to the redis server,
 # default values must work with a freshly installed redis server.
-#host						= 127.0.0.1
-#port						= 6379
-#dbid						= 0
-#password					= None
-#poolsize					= 10
+host				= 127.0.0.1
+port				= 6379
+dbid				= 0
+password			= None
+poolsize			= 10
 
 # Specify the server verbosity level.
 # This can be one of:
@@ -74,10 +74,10 @@
 # WARNING (only very important / critical messages and errors are logged)
 # ERROR (only errors / critical messages are logged)
 # CRITICAL (only critical messages are logged)
-#log_level			= INFO
+log_level			= INFO
 
 # Specify the log file path
-#log_file			= /var/log/jasmin/redis-client.log
+log_file			= /var/log/jasmin/redis-client.log
 
 # When to rotate the log file, possible values:
 # S:		Seconds
@@ -86,28 +86,28 @@
 # D:		Days
 # W0-W6:	Weekday (0=Monday)
 # midnight:	Roll over at midnight
-#log_rotate = W6
+log_rotate 			= W6
 
 # The following directives define logging patterns including:
 # - log_format: using python logging's attributes
 #               refer to https://docs.python.org/2/library/logging.html#logrecord-attributes
 # -log_date_format: using python strftime formating directives
 #                   refer to https://docs.python.org/2/library/time.html#time.strftime
-#log_format			= %(asctime)s %(levelname)-8s %(process)d %(message)s
-#log_date_format	= %Y-%m-%d %H:%M:%S
+log_format			= %(asctime)s %(levelname)-8s %(process)d %(message)s
+log_date_format 		= %Y-%m-%d %H:%M:%S
 
 [dlr]
 # DLRLookup process id
-pid = dlrlookupd-01
+pid 			= dlrlookupd
 
 # DLRLookup mechanism configuration
-#dlr_lookup_retry_delay = 10
-#dlr_lookup_max_retries = 2
+dlr_lookup_retry_delay 	= 10
+dlr_lookup_max_retries 	= 5
 
 # If smpp_receipt_on_success_submit_sm_resp is True, every connected user to smpp server will
 # receive a receipt (data_sm or deliver_sm) whenever a submit_sm_resp is received
 # for a message he sent and requested receipt for it.
-#smpp_receipt_on_success_submit_sm_resp = False
+smpp_receipt_on_success_submit_sm_resp = True
 
 # Specify the server verbosity level.
 # This can be one of:
@@ -117,10 +117,10 @@ pid = dlrlookupd-01
 # WARNING (only very important / critical messages and errors are logged)
 # ERROR (only errors / critical messages are logged)
 # CRITICAL (only critical messages are logged)
-#log_level			= INFO
+log_level			= INFO
 
 # Specify the log file path
-#log_file			= /var/log/jasmin/messages.log
+log_file			= /var/log/jasmin/messages.log
 
 # When to rotate the log file, possible values:
 # S:		Seconds
@@ -129,13 +129,13 @@ pid = dlrlookupd-01
 # D:		Days
 # W0-W6:	Weekday (0=Monday)
 # midnight:	Roll over at midnight
-#log_rotate = midnight
+log_rotate 			= midnight
 
 # The following directives define logging patterns including:
 # - log_format: using python logging's attributes
 #               refer to https://docs.python.org/2/library/logging.html#logrecord-attributes
 # -log_date_format: using python strftime formating directives
 #                   refer to https://docs.python.org/2/library/time.html#time.strftime
-#log_format			= %(asctime)s %(levelname)-8s %(process)d %(message)s
-#log_date_format	= %Y-%m-%d %H:%M:%S
-#log_privacy        = False
+log_format			= %(asctime)s %(levelname)-8s %(process)d %(message)s
+log_date_format			= %Y-%m-%d %H:%M:%S
+log_privacy        		= False
