--- a/misc/config/interceptor.cfg
+++ b/misc/config/interceptor.cfg
@@ -10,18 +10,18 @@
 
 [interceptor]
 # If you want you can bind a single interface, you can specify its IP here
-#bind				= 0.0.0.0
+bind		= 0.0.0.0
 
 # Accept connections on the specified port, default is 8987
-#port				= 8987
+port		= 8987
 
 # If authentication is True, access will require entering a username and password
 # as defined in admin_username and admin_password, you can disable this security
 # layer by setting authentication to False, in this case admin_* values are ignored.
-#authentication		= True
-#admin_username		= iadmin
+authentication	= True
+admin_username	= iadmin
 # This is a MD5 password digest hex encoded
-#admin_password		= dd8b84cdb60655fed3b9b2d668c5bd9e
+admin_password	= dd8b84cdb60655fed3b9b2d668c5bd9e
 
 # Specify the server verbosity level.
 # This can be one of:
@@ -31,10 +31,10 @@
 # WARNING (only very important / critical messages and errors are logged)
 # ERROR (only errors / critical messages are logged)
 # CRITICAL (only critical messages are logged)
-#log_level			= INFO
+log_level	= INFO
 
 # Specify the log file path
-#log_file			= /var/log/jasmin/interceptor.log
+log_file	= /var/log/jasmin/interceptor.log
 
 # When to rotate the log file, possible values:
 # S:		Seconds
@@ -43,15 +43,15 @@
 # D:		Days
 # W0-W6:	Weekday (0=Monday)
 # midnight:	Roll over at midnight
-#log_rotate = W6
+log_rotate 	= W6
 
 # The following directives define logging patterns including:
 # - log_format: using python logging's attributes
 #               refer to https://docs.python.org/2/library/logging.html#logrecord-attributes
 # -log_date_format: using python strftime formating directives
 #                   refer to https://docs.python.org/2/library/time.html#time.strftime
-#log_format			= %(asctime)s %(levelname)-8s %(process)d %(message)s
-#log_date_format	= %Y-%m-%d %H:%M:%S
+log_format	= %(asctime)s %(levelname)-8s %(process)d %(message)s
+log_date_format	= %Y-%m-%d %H:%M:%S
 
 # This is a duration threshold (seconds) for logging slow scripts.
-#log_slow_script = 1
+log_slow_script = 1
