--- a/misc/config/systemd/jasmin-dlrd.service
+++ b/misc/config/systemd/jasmin-dlrd.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Jasmin SMS Gateway DLR throwing standalone daemon
-Requires=network.target jasmind.service
-After=network.target jasmind.service
+Requires=network.target
+After=network.target
 
 [Service]
 SyslogIdentifier=jasmin-dlrd
