--- a/misc/config/systemd/jasmind.service
+++ b/misc/config/systemd/jasmind.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Jasmin SMS Gateway
-Requires=network.target jasmin-interceptord.service jasmin-dlrd.service jasmin-dlrlookupd.service
+Requires=network.target jasmin-interceptord.service
 After=network.target
 
 [Service]
@@ -8,7 +8,7 @@ SyslogIdentifier=jasmind
 PIDFile=/run/jasmind.pid
 User=jasmin
 Group=jasmin
-ExecStart=/usr/local/bin/jasmind.py --username jcliadmin --password jclipwd
+ExecStart=/usr/local/bin/jasmind.py --username jsadmin --password jspasswd --enable-interceptor-client
 
 [Install]
 WantedBy=multi-user.target
